fixed the postioning, made the bg-color black instead of transparent and hid scrollbars.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,4 +16,15 @@ body {
 
 #root {
   display: block;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }    
